Finished viewport, Drawable, Background and Bomber

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 <body>
 
     <img id="airplane1" src="img/airplane1.png" alt="airplane1" />
+    <img id="garden" src="img/garden.jpg" alt="garden" />
 
     <canvas id="canvas"></canvas>
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/drawable.js"></script>
+    <script type="text/javascript" src="js/background.js"></script>
     <script type="text/javascript" src="js/bomber.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 
