Added bomb class, and throwbomb is coherent with direction of the bomber

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <body>
 
+    <!-- Create all the images used in the canvas-->
     <img id="airplane1" src="img/airplane1.png" alt="airplane1" />
+    <img id="bomb" src="img/bomb.png" alt="bomb" />
     <img id="garden" src="img/garden.jpg" alt="garden" />
 
     <canvas id="canvas"></canvas>
@@ -21,6 +23,7 @@
     <script type="text/javascript" src="js/drawable.js"></script>
     <script type="text/javascript" src="js/background.js"></script>
     <script type="text/javascript" src="js/bomber.js"></script>
+    <script type="text/javascript" src="js/bomb.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 
 </body>
