First class presentation, removed img/ from .gitignore

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- Create all the images used in the canvas-->
     <img id="airplane1" src="img/airplane1.png" alt="airplane1" />
     <img id="bomb" src="img/bomb.png" alt="bomb" />
+    <img id="bullet" src="img/bullet.png" alt="bullet" />
     <img id="garden" src="img/garden.jpg" alt="garden" />
 
     <canvas id="canvas"></canvas>
@@ -24,6 +25,7 @@
     <script type="text/javascript" src="js/background.js"></script>
     <script type="text/javascript" src="js/bomber.js"></script>
     <script type="text/javascript" src="js/bomb.js"></script>
+    <script type="text/javascript" src="js/bullet.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 
 </body>
