finished collision, modified draw with setTransform instead of translate and rotate

--- a/index.html
+++ b/index.html
@@ -14,16 +14,23 @@
 <body>
 
     <!-- Create all the images used in the canvas-->
-    <img id="airplane1" src="img/airplane1.png" alt="airplane1" />
+    <img id="bomber1" src="img/bomber1.png" alt="bomber1" />
+    <img id="bomber1-dead" src="img/bomber1-dead.png" alt="bomber1-dead" />
+    <img id="base1" src="img/base1.png" alt="base1" />
+    <img id="base1-dead" src="img/base1-dead.png" alt="base1-dead" />
     <img id="bomb" src="img/bomb.png" alt="bomb" />
+    <img id="bomb-dead" src="img/bomb-dead.png" alt="bomb-dead" />
     <img id="bullet" src="img/bullet.png" alt="bullet" />
+    <img id="bullet-dead" src="img/bullet-dead.png" alt="bullet-dead" />
     <img id="garden" src="img/garden.jpg" alt="garden" />
 
     <canvas id="canvas"></canvas>
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/game.js"></script>
     <script type="text/javascript" src="js/drawable.js"></script>
     <script type="text/javascript" src="js/background.js"></script>
     <script type="text/javascript" src="js/bomber.js"></script>
+    <script type="text/javascript" src="js/base.js"></script>
     <script type="text/javascript" src="js/bomb.js"></script>
     <script type="text/javascript" src="js/bullet.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
