implements collision between the player and enemy fire

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <img id="base1-dead" src="img/base1-dead.png" alt="base1-dead" />
     <img id="bomb" src="img/bomb.png" alt="bomb" />
     <img id="bomb-dead" src="img/bomb-dead.png" alt="bomb-dead" />
+    <img id="missile1" src="img/missile1.png" alt="missile1" />
     <img id="bullet" src="img/bullet.png" alt="bullet" />
     <img id="bullet-dead" src="img/bullet-dead.png" alt="bullet-dead" />
     <img id="garden" src="img/garden.jpg" alt="garden" />
