--- a/index.html
+++ b/index.html
@@ -37,8 +37,19 @@
     </div>
 
     <!--Scripts-->
+
+    <!-- Jquery JavaScript -->
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+
+    <!-- Ionsound Javascript -->
+    <script type="text/javascript" src="js/ion.sound.min.js"></script>
+
+    <!-- Custom JavaScript -->
+
+    <!--Basic logics-->
     <script type="text/javascript" src="js/game.js"></script>
+
+    <!--Classes-->
     <script type="text/javascript" src="js/drawable.js"></script>
     <script type="text/javascript" src="js/background.js"></script>
     <script type="text/javascript" src="js/bomber.js"></script>
@@ -46,6 +57,8 @@
     <script type="text/javascript" src="js/bomb.js"></script>
     <script type="text/javascript" src="js/bullet.js"></script>
     <script type="text/javascript" src="js/explosion.js"></script>
+
+    <!--Controller-->
     <script type="text/javascript" src="js/app.js"></script>
 
 </body>
