included localStorage for score and lifes. Fixed bugs 5 and 6.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 
     <!-- Custom JavaScript -->
 
+    <!--Save to local storage javascript-->
+    <script type="text/javascript" src="js/save.js"></script>
+
     <!--Basic logics-->
     <script type="text/javascript" src="js/game.js"></script>
 
