Added levels. Level class includes the enemy bases

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
 <body>
 
     <!-- Create all the images used in the canvas. All these images are hidden-->
-    <img id="garden" src="img/garden.jpg" alt="garden" />
+    <img id="backgroundImage1" src="img/backgroundImage1.jpg" alt="backgroundImage1" />
+    <img id="backgroundImage2" src="img/backgroundImage2.jpg" alt="backgroundImage2" />
+    <img id="backgroundImage3" src="img/backgroundImage3.jpg" alt="backgroundImage3" />
+    <img id="backgroundImage4" src="img/backgroundImage4.jpg" alt="backgroundImage4" />
+    <img id="backgroundImage5" src="img/backgroundImage5.jpg" alt="backgroundImage5" />
+    <img id="backgroundImage6" src="img/backgroundImage6.jpg" alt="backgroundImage6" />
     <img id="bomber1-dead" src="img/bomber1-dead.png" alt="bomber1-dead" />
     <img id="bomber2-dead" src="img/bomber2-dead.png" alt="bomber2-dead" />
     <img id="bomber3-dead" src="img/bomber3-dead.png" alt="bomber3-dead" />
@@ -100,13 +105,12 @@
 
     <!-- Custom JavaScript -->
 
-    <!--Save to local storage javascript-->
-    <script type="text/javascript" src="js/save.js"></script>
-
     <!--Basic logics-->
     <script type="text/javascript" src="js/game.js"></script>
+    <script type="text/javascript" src="js/sounds.js"></script>
 
     <!--Classes-->
+    <script type="text/javascript" src="js/level.js"></script>
     <script type="text/javascript" src="js/drawable.js"></script>
     <script type="text/javascript" src="js/background.js"></script>
     <script type="text/javascript" src="js/bomber.js"></script>
