ready for presentation

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
     <img id="bomb-explosion" src="img/bomb-explosion.png" alt="bomb-explosion" />
     <img id="bullet-explosion" src="img/bullet-explosion.png" alt="bullet-explosion" />
     <img id="base1" src="img/base1.png" alt="base1" />
+    <img id="base2" src="img/base2.png" alt="base2" />
+    <img id="base3" src="img/base3.png" alt="base3" />
     <img id="base1-dead" src="img/base1-dead.png" alt="base1-dead" />
+    <img id="base2-dead" src="img/base2-dead.png" alt="base2-dead" />
+    <img id="base3-dead" src="img/base3-dead.png" alt="base3-dead" />
     <img id="missile1" src="img/missile1.png" alt="missile1" />
 
     <!-- All html visible content-->
@@ -141,7 +145,7 @@
             </section>
 
             <section id="random-message">
-                <p class="normal-text">To play this game use the right key to accelerate, the left key to brake, the up key to put the airplane nose up and the down key to put the airplane nose down. Use space to shoot and "B" key to throw bombs.</p>
+                Use right key to accelerate, left key to brake, up key to put the airplane nose up and down key to put the nose down, space to shoot and B key to throw bombs.
             </section>
 
             <section>
